--- a/src/index.html
+++ b/src/index.html
@@ -88,19 +88,16 @@
 			</p>
 			<div>
 				<img src="img/Кейсы.png" alt="ОЙ! Картинку украли!">
-				<table>
-					<tr>
-						<th>CLIENT:</th>
-						<th>Название проекта</th>
-					</tr>
-					<td>Какая-то компания</td>
-					<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</td>
-					<tr>
-						<th>WEBSITE:</th>
 
-					</tr>
-					<td>http://www.somedomain.com</td>
-				</table>
+				<div>
+					<h4>CLIENT:</h4>
+					<span>Какая-то компания</span>
+					<h4>Название проекта</h4>
+					<span>	Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, ducimus modi maiores adipisci quibusdam et odio perspiciatis incidunt deleniti explicabo veniam debitis qui, numquam magnam quos iusto facilis temporibus. Doloremque!</span>
+					<h4>WEBSITE:</h4>
+					<span>http://www.somedomain.com</span>
+				</div>
+
 				<input type="submit" value="VISIT LIVE SITE">
 			</div>
 		</div>
